ipc/ipdl/test/ipdl/ok/Pmaybe_Union.ipdl
union MaybeUnion {
    int[];
    int;
    double;
};

sync protocol Pmaybe_Union {
parent:
    async Msg(MaybeUnion u, MaybeUnion? au) returns (MaybeUnion r);
};
