ipc/ipdl/test/ipdl/error/PasyncMessageListed.ipdl
//error: IPC message PasyncMessageListed::Msg is async, can be delisted

protocol PasyncMessageListed {
parent:
    async Msg();
};
